# cipherdao-arcium

./: .env.example  .gitignore  .vercelignore  Anchor.toml  Arcium.toml  Cargo.toml  LICENSE  README.md  SUBMISSION.md  package-lock.json  package.json  tsconfig.json  vercel.json
api/: index.js
app/: privateDaoClient.ts  siteApi.ts
app/idl/: private_dao.json
app/scripts/: bootstrapDao.ts  castVote.ts  publishTally.ts
app/types/: private_dao.ts
docs/: arcium-integration.md  deployment.md  devnet-runbook.md  local-image-generator.md  maintenance-checklist.md  windows-gpu-mac-dao.md
encrypted-ixs/: Cargo.toml  private_vote.rs
programs/private_dao/: Cargo.toml
programs/private_dao/src/: lib.rs
public-circuits/: cast_private_vote.arcis  cast_private_vote_v2.arcis  init_private_ballot.arcis  init_private_ballot_v2.arcis  publish_private_tally.arcis  publish_private_tally_v2.arcis
scripts/: deploy-devnet.sh  dev-server.js  load-env.js  migrate-site-state-to-postgres.js  precreate-rounds.js  sd-webui-generator.js  start-windows-image-generator.cmd
site/: index.html  styles.css
site/src/: app.js  arcium-vote-client.js  dilemmas.js  governance-core.js  node-crypto-shim.js
supabase/: schema.sql
tests/: smoke.test.js
