[package]
name = "private_dao"
version = "0.1.0"
description = "CipherDAO Solana program with Arcium private vote tallying"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "private_dao"

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "arcium-anchor/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
arcium-client = { default-features = false, version = "=0.9.7" }
arcium-macros = "=0.9.7"
arcium-anchor = "=0.9.7"
unicode-segmentation = { version = "=1.12.0" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
